--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <title>AugmentedDuck</title>
     </head>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+        <h1>The simple hub of AugmentedDuck</h1>
+        <p>Just has links to my other "game" sites</p>
+        <button onclick="location.href = '/blackjack';" id="myButton" class="float-left submit-button" >Blackjack</button>
     </body>
 </html>
