--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <body>
         <h1>The simple hub of AugmentedDuck</h1>
         <p>Just has links to my other "game" sites</p>
-        <button onclick="location.href = 'augmentedduck.github.io/blackjack';" id="myButton" class="float-left submit-button" >Blackjack</button>
+        <button name="Blackjack" onClick="redirect()">
+
+        <script type="text/javascript">
+        function redirect()
+        {
+            var url = "http://augmentedduck.github.io/blackjack";
+            window.location(url);
+        }
     </body>
 </html>
