--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <body>
         <h1>The simple hub of AugmentedDuck</h1>
         <p>Just has links to my other "game" sites</p>
-        <button name="Blackjack" onClick="redirect()">
-
-        <script type="text/javascript">
-        function redirect()
-        {
-            var url = "http://augmentedduck.github.io/blackjack";
-            window.location(url);
-        }
+        <button onclick="window.location.href='https:/augmentedduck.github.io/blackjack'">Blackjack</button>
+        <button onclick="window.location.href='https:/augmentedduck.github.io/dice-demonstration'">Dice as radioactive nuclei</button>
     </body>
 </html>
