--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>The simple hub of AugmentedDuck</h1>
         <p>Just has links to my other "game" sites</p>
-        <button onclick="window.location.href='https:/augmentedduck.github.io/blackjack'">Blackjack</button>
-        <button onclick="window.location.href='https:/augmentedduck.github.io/dice-demonstration'">Dice as radioactive nuclei</button>
+        <button onclick="window.location.href='https://augmentedduck.github.io/blackjack'">Blackjack</button>
+        <button onclick="window.location.href='https://augmentedduck.github.io/dice-demonstration'">Dice as radioactive nuclei</button>
     </body>
 </html>
