--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>The simple hub of AugmentedDuck</h1>
-        <p>Just has links to my other "game" sites</p>
+        <p>Just has links to my sub sites</p>
         <h2>Games<\h2>
         <button onclick="window.location.href='https://augmentedduck.github.io/blackjack'">Blackjack</button>
         <button onclick="window.location.href='https://augmentedduck.github.io/hit-the-ballon'">Blackjack</button>
