Used the right "slash"

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <body>
         <h1>The simple hub of AugmentedDuck</h1>
         <p>Just has links to my sub sites</p>
-        <h2>Games<\h2>
+        <h2>Games</h2>
         <button onclick="window.location.href='https://augmentedduck.github.io/blackjack'">Blackjack</button>
         <button onclick="window.location.href='https://augmentedduck.github.io/hit-the-ballon'">Blackjack</button>
-        <h2>Simulations and Demonstrations<\h2>
+        <h2>Simulations and Demonstrations</h2>
         <button onclick="window.location.href='https://augmentedduck.github.io/dice-demonstration'">Dice as radioactive nuclei</button>
     </body>
 </html>
