--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <p>Just has links to my sub sites</p>
         <h2>Games</h2>
         <button onclick="window.location.href='https://augmentedduck.github.io/blackjack'">Blackjack</button>
-        <button onclick="window.location.href='https://augmentedduck.github.io/hit-the-ballon'">Hit the Ballon</button>
+        <button onclick="window.location.href='https://augmentedduck.github.io/hit-the-balloon'">Hit the Balloon</button>
         <h2>Simulations and Demonstrations</h2>
         <button onclick="window.location.href='https://augmentedduck.github.io/dice-demonstration'">Dice as Radioactive Nuclei</button>
     </body>
