--- a/index.html
+++ b/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="utf-8 " />
-        <title>AugmentedDuck</title>
+        <title>AugmentedDuck | Home</title>
+        <meta name="description" content="a place to find AugmentedDuck's stuff">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>The simple hub of AugmentedDuck</h1>
-        <p>Just has links to my sub sites</p>
-        <h2>Games</h2>
-        <button onclick="window.location.href='https://augmentedduck.github.io/blackjack'">Blackjack</button>
-        <button onclick="window.location.href='https://augmentedduck.github.io/hit-the-balloon'">Hit the Balloon</button>
-        <h2>Simulations and Demonstrations</h2>
-        <button onclick="window.location.href='https://augmentedduck.github.io/dice-demonstration'">Dice as Radioactive Nuclei</button>
+        <header class="main-header">
+            <nav class="nav main-nav">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="games.html">GAMES</a></li>
+                    <li><a href="others.html">OTHER</a></li>
+                </ul>
+            </nav>
+            <h1 class="title-name">augmentedDuck</h1>
+        </header>
+        <section class="content-section container">
+            <h2 class="section-header">Home</h2>
+            <p>Just has links to my sub sites</p>
+            <img class="home-logo" src="images/logo.png" alt="augmentedduck's logo">
+        </section>
     </body>
 </html>
