added snake button

--- a/games.html
+++ b/games.html
@@ -21,6 +21,7 @@
       <div class="container">
         <button class="btn" type="button" onclick="window.location.href='https://augmentedduck.github.io/blackjack'">Blackjack</button>
         <button class="btn" type="button" onclick="window.location.href='https://augmentedduck.github.io/hit-the-balloon'">Hit the Balloon</button>
+        <button class="btn" type="button" onclick="window.location.href='https://augmentedduck.github.io/snake'">Snake</button>
       </div>
     </section>
   </body>
