--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="games.html">GAMES</a></li>
                     <li><a href="others.html">OTHER</a></li>
+                    <li><a href="login.html">LOG-IN</a></li>
                 </ul>
             </nav>
             <h1 class="title-name">augmentedDuck</h1>
