Added some more pages

--- a/others.html
+++ b/others.html
@@ -20,6 +20,8 @@
       <h2 class="section-header">Other stuff</h2>
       <div class="container">
         <button class="btn" type="button" onclick="window.location.href='https://augmentedduck.github.io/dice-demonstration'">Dice as Radioactive Nuclei</button>
+        <button class="btn" type="button" onclick="window.location.href='https://augmentedduck.github.io/NightCloud'">A comparitor</button>
+        <button class="btn" type="button" onclick="window.location.href='https://augmentedduck.github.io/Chill-Fridge'">A list of food (Danish)</button>
       </div>
     </section>
   </body>
