--- a/games.html
+++ b/games.html
@@ -22,6 +22,7 @@
         <button class="btn" type="button" onclick="window.location.href='https://augmentedduck.github.io/blackjack'">Blackjack</button>
         <button class="btn" type="button" onclick="window.location.href='https://augmentedduck.github.io/hit-the-balloon'">Hit the Balloon</button>
         <button class="btn" type="button" onclick="window.location.href='https://augmentedduck.github.io/snake'">Snake</button>
+        <button class="btn" type="button" onclick="window.location.href='https://augmentedduck.github.io/hangman'">Hangman</button>
       </div>
     </section>
   </body>
